# libsoftfloat

./: .mailmap  CMakeLists.txt  SharemindLibSoftfloatConfig.cmake.in  SharemindLibSoftfloatConfigVersion.cmake.in
src/: macros.h  milieu.h  softfloat.c  softfloat.h  specialize.h  timesoftfloat.c
src/internal/: macros.h  specialize.h
src/sharemind/: CMakeLists.txt  SharemindLibsoftfloatConfig.cmake.in  SharemindLibsoftfloatConfigVersion.cmake.in
